[package]
name = "server-example"
version = "0.1.0"
edition = "2021"

[dependencies]
dropshot = { workspace = true }
rcgen = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
schemars = { workspace = true }
snafu = { workspace = true }
tempfile = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
